@@ -5,7 +5,8 @@ Changelog
 2.3.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix broken <meta /> tags in text/html MIME parts.
+  [lgraf]
 
 
 2.3.6 (2015-09-02)
